# walmart-api

./: .gitignore  README.md  pyproject.toml
artifacts/metrics/: arima_train_pipeline.csv  sarima_train_pipeline.csv
artifacts/models/: arima_train_pipeline.pkl  sarima_train_pipeline.pkl
src/api/: app.py  errors.py  responses.py  server.py
src/api/constants/: models.py
src/api/services/: check_health.py  get_metrics.py  make_predictions.py
