[tool.poetry]
name = "walmart-api"
version = "0.1.0"
description = ""
authors = ["olverarcedev <olverarcedev@gmail.com>"]

packages = [
    { include = "api", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
statsforecast = "^2.0.3"
pandas = "^3.0.1"

[tool.poetry.scripts]
start = "api.server:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"